Instrument various classes so they show up in the leak/bloat stats.  r=morse@netscape.com  sr=scc@mozilla.org  b=56644